# glpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  post-clone.sh
.github/workflows/: ci.yml  cmake-single-platform.yml
cmake/: ProjectConfig.cmake
docs/: CMakeLists.txt  mainpage.md
examples/: CMakeLists.txt
examples/01_triangle/: CMakeLists.txt  main.cpp
examples/02_camera/: CMakeLists.txt  main.cpp
examples/03_grid/: CMakeLists.txt  main.cpp
examples/04_framebuffer/: CMakeLists.txt  main.cpp
examples/05_geometry/: CMakeLists.txt  main.cpp
examples/06_shapes/: CMakeLists.txt  main.cpp
examples/07_instanced/: CMakeLists.txt  main.cpp
include/FooBar/: foo.hpp
include/glpp/: Buffer.hpp  FrameBuffer.hpp  Shader.hpp  Texture.hpp  VBO.hpp
include/glpp/extra/: Buffer.hpp  Camera.hpp  Drawable.hpp  GeometryBuffer.hpp  Grid.hpp  Line.hpp  Marker.hpp  Quad.hpp  Shapes.hpp  Transform.hpp  Vertex.hpp  debug.hpp
src/: Buffer.cpp  CMakeLists.txt  FrameBuffer.cpp  Shader.cpp  Texture.cpp  VBO.cpp  foo.cpp
src/extra/: Buffer.cpp  Camera.cpp  GeometryBuffer.cpp  Grid.cpp  Line.cpp  Marker.cpp  Quad.cpp  Shapes.cpp  Transform.cpp  Vertex.cpp  debug.cpp
tests/: CMakeLists.txt  glTest.cpp  glTest.hpp  glmChecker.cpp  glmChecker.hpp  test_extra_Transform.cpp  test_glm_compare.cpp  test_quad.cpp  test_shader.cpp  test_texture.cpp  test_uniform.cpp  test_vertex.cpp
